# FirstAidBot

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile_build  README.md  Readme.md  app.py  bot.py  docker-compose-test.yml  docker-compose.yml  docker-compose_dev.yml  docker-compose_main.yml  docker-compose_prod.yml  docker-compose_test.yml
.github/: dependabot.yml
.github/workflows/: CD.yml  CD_dev.yml  CD_master.yml  CI.yml  CI_CD.yml  build.yml  build_and_test.yml  build_and_test_bot.yml  build_bot.yml  build_flutter_apk.yml  dependabot_auto_merge.yml
app/: .libbridge_definitions.dart  README.md  flutter_jank_metrics_01.json  pubspec.yaml
app/android/app/: build.gradle  gradle.properties
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/first_aid_robot/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/fa_api/: Cargo.toml
app/fa_api/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
app/integration_test/: simple_test.dart
app/ios/Runner/: Info.plist  bridge_generated.h
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: bridge_definitions.dart  bridge_definitions.web.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  bridge_generated.web.io.dart  bridge_generated.web.web.dart  ffi.dart  ffi_web.dart  home.dart  main.dart  state.dart  state_widget.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: fa_api.dart
app/linux/: CMakeLists.txt  my_application.cc
app/linux/flutter/: generated_plugins.cmake
app/macos/Runner/: bridge_generated.h
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/native/: Cargo.toml
app/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
app/rust/: Cargo.toml
app/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
app/rust/src/api/: bridge_generated.io.rs  fa_api.rs  mod.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/windows/: CMakeLists.txt
app/test/: data_test.dart  ffi.test.dart  widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
bot/: Cargo.toml
bot/src/: main.rs
bot/src/bot/: error_handler.rs  init_connections.rs  mod.rs  report_error.rs  run.rs  state.rs
bot/src/bot/dialogue/: commands.rs  endpoints.rs  mod.rs
bot/src/bot/dialogue/logic/: bot_logic.rs  broadcast.rs  helpers.rs  keyboard.rs  log_to_redis.rs  mod.rs
core/: Cargo.toml
core/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  context.rs  lib.rs  main.rs
core/src/bot/: error_handler.rs  mod.rs  report_error.rs  run.rs  state.rs
core/src/bot/dialogue/: commands.rs  endpoints.rs
core/src/bot/dialogue/logic/: bot_logic.rs  broadcast.rs  helpers.rs  keyboard.rs  log_to_redis.rs  state_logic.rs
core/src/logic/: mod.rs  state.rs  state_transition.rs
core/src/model/: data.rs  finite_state.rs  lang.rs  mod.rs  test.rs
core/tests/: test_data.rs
dashboard/: app.py  convert_rdb.py  requirements.txt
first_aid_bot_python/: Dockerfile  requirements.txt
first_aid_bot_python/model/: sheet.py
first_aid_bot_rust/: Cargo.toml  Dockerfile  Dockerfile.prod
first_aid_bot_rust/src/: lang.rs  lib.rs  main.rs
first_aid_bot_rust/src/bot/: commands.rs  dialogue.rs  error_handler.rs  helpers.rs  keyboard.rs  mod.rs
first_aid_bot_rust/src/bot/dialogue/: commands.rs  handlers.rs  helpers.rs  logic.rs  mod.rs  preferences.rs  state.rs
first_aid_bot_rust/src/model/: data.rs  finite_state.rs  lang.rs  load_data.rs  mod.rs
handlers/: common.py  first_aid.py
model/: sheet.py
src/: main.rs
src/bot/: error_handler.rs  helpers.rs  mod.rs  report_error.rs  run.rs  state.rs
src/bot/dialogue/: commands.rs  endpoints.rs  fa_args.rs  fa_logic.rs  handlers.rs  helpers.rs  logic.rs  mod.rs
src/bot/dialogue/logic/: broadcast.rs  helpers.rs  keyboard.rs  log_to_redis.rs  mod.rs  state_logic.rs
src/model/: data.rs  finite_state.rs  lang.rs  mod.rs  test.rs
