[package]
name = "first_aid_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Load the data
csv = "1.1.6"
bytes = "1.2.1"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.12"}
regex = "1.6.0"
indexmap = "1.9.1"

# Counting users
redis = { version = "0.21.6", features = ["tokio-comp"] }
futures = "0.3.24"

# Telegram api
teloxide = { version = "0.10.1", features = ["macros", "auto-send", "redis-storage",
  "bincode-serializer", "throttle"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
# anyhow = { version = "1.0.58", features = ["backtrace"] }
anyhow = { version = "1.0.65" }
tokio = { version =  "1.21.1", features = ["rt-multi-thread", "macros"] }
const_format = "0.2.26"
itertools = "0.10.5"
