[package]
name = "first_aid_bot"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Load the data
csv = "1.1"
bytes = "1.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11"}
indexmap = "1.9"

# Counting users
redis = { version = "0.22", features = ["tokio-comp"] }
futures = "0.3"

# Telegram api
teloxide = { version = "0.11", features = ["macros", "redis-storage",
  "bincode-serializer", "throttle"] }
log = "0.4"
pretty_env_logger = "0.4"
# anyhow = { version = "1.0", features = ["backtrace"] }
anyhow = "1.0" 
tokio = { version =  "1.22", features = ["rt-multi-thread", "macros"] }
const_format = "0.2" 
itertools = "0.10"

rand = "0.8"

#https://docs.rs/openssl/0.10.34/openssl/#vendored
openssl = { version = "*", features = ["vendored"] }
