[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first_aid_bot_core = { path = "../core" }
tokio = { version =  "1.23", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4"
