[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first_aid_bot_core = { path = "../core" }
tokio = { version =  "1.28", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1.0" }
anyhow = "1.0" 
teloxide = { version = "0.12", features = ["macros", "redis-storage",
  "bincode-serializer", "throttle"] }
redis = { version = "0.23", features = ["tokio-comp"] }
rand = "0.8"
itertools = "0.10"
futures = "0.3"
