[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first_aid_bot_core = { path = "../core" }
pretty_env_logger = "0.5"
teloxide = { version = "0.12", features = ["macros", "redis-storage",
"bincode-serializer", "throttle"] }
redis = { version = "0.25", features = ["tokio-comp"] }
rand = "0.8"
itertools = "0.12"
futures = "0.3"

anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
