[package]
name = "first_aid_bot_core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# # Load the data
csv = "1.2"
bytes = "1.5"
reqwest = { version = "0.11"}
indexmap = "1.9"
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

const_format = "0.2" 
regex = "1.9.5"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"
