[package]
name = "first_aid_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Load the data
csv = "1.1.6"
bytes = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.11"}
regex = "1.5.6"
indexmap = "1.9.1"

# Counting users
redis = { version = "0.21.5", features = ["tokio-comp"] }
futures = "0.3.21"

# Telegram api
teloxide = { version = "0.9.2", features = ["macros", "auto-send", "redis-storage",
  "bincode-serializer", "throttle"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = { version = "1.0.58", features = ["backtrace"] }
tokio = { version =  "1.19.2", features = ["rt-multi-thread", "macros"] }
const_format = "0.2.25"
itertools = "0.10.3"
async-recursion = "1.0.0"
