[package]
name = "fa_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first_aid_bot_core = { path = "../../core" }
anyhow = "1.0" 
# futures = "0.3"
tokio = { version =  "1.28" , features = ["macros", "rt-multi-thread" ] }
flutter_rust_bridge = "1.77"
# reqwest = { version = "0.11", features = ["native-tls-vendored" ]}

# https://docs.rs/openssl/0.10.34/openssl/#vendored
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.cargo-udeps.ignore]
normal = ["flutter_rust_bridge", "openssl"]
#development = []
