[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
first_aid_bot_core = { path = "../../core" }
flutter_rust_bridge = "2.0.0-dev"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { workspace = true }
